@@ -7,6 +7,9 @@ index = malkusch\autoloader\AutoloaderIndex_SerializedHashtable_GZ
 ; If the index is an AutoloaderIndex_File instance you can configure an index file
 ;file = /tmp/index
 
+; AutoloaderIndex_File file permissions
+;permissions = 0644
+
 ; If the index is AutoloaderIndex_PDO you should configure a PDO instance
 ;pdo.dsn = "mysql:host=localhost;dbname=test"
 ;pdo.username = test
