@@ -1,3 +1,8 @@
+2012-11-04 Markus Malkusch <markus@malkusch.de>
+
+    * Autoloader/index/AutoloaderIndex_File (AutoloaderIndex_File):
+    Added option to change the file permissions of the index file.
+
 2012-09-15 Markus Malkusch <markus@malkusch.de>
 
     * Autoloader/Autoloader.php (Autoloader):
